helm/apps/spend-app/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spend-app-backend
  namespace: spend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spend-app-backend
  template:
    metadata:
      labels:
        app: spend-app-backend
    spec:
      containers:
        - name: backend
          image: 192.168.1.243:5000/spend-app-backend:555dbd494d751590ed77211f0f3052243db8f909
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: spend-app-backend
  namespace: spend-app
spec:
  selector:
    app: spend-app-backend
  ports:
    - name: http
      port: 8000
      targetPort: 8000
